# djangoarrayfield

./: CHANGELOG.md  README.md  fields.py  generics.py  pyproject.toml  serializers.py
.github/workflows/: test_arrayfield_django.yml  test_django_arrayfield.yml
src/djangoarray/: apps.py  fields.py  generics.py  models.py  serializers.py  test_arrayfield.py  utils.py
src/djangoarrayfield/: generics.py  test_arrayfield.py
tests/: pyproject.toml
tests/test_arrayfield_django_conf/: settings.py  urls.py
