[tool.poetry]
name = "test_arrayfield_django_conf"
description = "Mock django project for testing djangoarray.fields.ArrayField"
version = "0.0.1"
license = "./LICENSE.txt"
authors = [
    "Michał Gawor <michal@clarin.eu>",
]
maintainers = [
    "Michał Gawor <michal@clarin.eu>",
]
packages = [
    { include = "./test_arrayfield_django_conf" },
]


[tool.poetry.urls]
changelog = "https://github.com/clarin-eric/djangoarrayfield/blob/main/CHANGELOG.md"
documentation = ""
homepage = "https://centres.clarin.eu/"
repository = "https://github.com/clarin-eric/djangoarrayfield"

[tool.poetry.dependencies]
Django = '4.1.7'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"